--- a/resume/index.html
+++ b/resume/index.html
@@ -35,9 +35,7 @@
             <div class="resume-actions">
               <a class="btn primary" href="mailto:me@calebstammen.com">Email</a>
               <button class="btn secondary" type="button" data-copy-email>Copy email</button>
-              <button class="btn ghost" type="button" disabled title="PDF download coming soon">
-                Download PDF
-              </button>
+              <a class="btn ghost" href="./Caleb%20Stammen%20Resume.pdf" download>Download PDF</a>
             </div>
           </div>
 
@@ -82,6 +80,24 @@
               <li>Act as a technical advisor to IT leadership, contributing to improved cybersecurity posture and risk management.</li>
               <li>Design and operate AI infrastructure across cloud and on-prem experimentation, ultimately standardizing on cloud deployment.</li>
               <li>Guide internal teams on effective AI usage with emphasis on workflow integration, reliability, and adoption.</li>
+            </ul>
+          </article>
+
+          <article class="resume-role">
+            <h3>Founder / Owner</h3>
+            <div class="meta">
+              <span>Stammen Technology</span>
+              <span class="sep">&bull;</span>
+              <span>Dec 2022 - Present</span>
+              <span class="sep">&bull;</span>
+              <span>Hybrid</span>
+            </div>
+            <p>AI, software development, automation, and web development firm</p>
+            <ul class="list">
+              <li>Shipped multiple AI and software products for paying customers.</li>
+              <li>Built a B2B SaaS platform for the men's formalwear industry.</li>
+              <li>Developed multiple websites for small to mid-sized businesses.</li>
+              <li>Pivoted from IT services to AI and software development in 2023.</li>
             </ul>
           </article>
 
