Doc Update, Cleanup, startHttptServer.local.txt

--- a/index.html
+++ b/index.html
@@ -111,7 +111,7 @@
         </div>
         <div class="photo-grid hero-photos" aria-label="Hiking photo gallery">
           <figure class="photo-card">
-            <img src="assets/summit1.jpg" alt="Caleb Summiting a Mountain" loading="lazy" decoding="async">
+            <img src="assets/summit1.JPG" alt="Caleb Summiting a Mountain" loading="lazy" decoding="async">
           </figure>
           <figure class="photo-card">
             <img src="assets/rocks.JPG" alt="Caleb sitting on a rock in the mountains" loading="lazy" decoding="async">
@@ -400,7 +400,7 @@
           </div>
           <div class="photo-grid" aria-label="Hiking photo gallery">
             <figure class="photo-card">
-              <img src="assets/franconiaSit.JPG" alt="Caleb Sitting on Mountain" loading="lazy" decoding="async">
+              <img src="assets/franconia1.JPG" alt="Caleb Sitting on Mountain" loading="lazy" decoding="async">
             </figure>
             <figure class="photo-card">
               <img src="assets/waterfall1.JPG" alt="Caleb Standing at Waterfall" loading="lazy" decoding="async">
