--- a/index.html
+++ b/index.html
@@ -141,7 +141,8 @@
           <div class="info-card">
             <p class="panel-label">Now</p>
             <h3>Focus areas</h3>
-            <p>Operational AI, internal products, and reliable systems teams trust. Experience building secure B2B SaaS and AI Products that sell.</p>
+            <p>Operational AI, internal products, and reliable systems teams trust. Experience building secure B2B SaaS
+              and AI Products that sell.</p>
             <ul class="panel-list">
               <li>Use-case selection &amp; evaluation</li>
               <li>Data integrity &amp; governance</li>
@@ -163,7 +164,8 @@
         <div class="section-body">
           <p>
             I started my technology journey at 13, saving up for a laptop to learn how to code. Today I
-            lead AI and software initiatives with a systems administration background, understanding and focused on uptime,
+            lead AI and software initiatives with a systems administration background, understanding and focused on
+            uptime,
             security, and performance.
           </p>
           <p>
@@ -387,7 +389,8 @@
           <h2>Off the Clock</h2>
         </div>
         <div class="section-body">
-          <p>I reset in the mountains, with a book, or by building something that doesn’t compile. (interpret this as you wish)</p>
+          <p>I reset in the mountains, with a book, or by building something that doesn’t compile. (interpret this as
+            you wish)</p>
           <div class="tag-row">
             <span class="tag">Hiking</span>
             <span class="tag">Backpacking</span>
@@ -472,9 +475,6 @@
               </div>
             </article>
           </div>
-          <p class="map-note">Visited locations are highlighted in clay.</p>
-        </div>
-      </div>
     </section>
 
     <section class="section reveal" id="contact">
