--- a/index.html
+++ b/index.html
@@ -111,10 +111,15 @@
         </div>
         <div class="photo-grid hero-photos" aria-label="Hiking photo gallery">
           <figure class="photo-card">
-            <img src="assets/summit1.JPG" alt="Caleb Summiting a Mountain" loading="lazy" decoding="async">
+            <img src="assets/summit1-1000.jpg"
+              srcset="assets/summit1-1000.jpg 1000w, assets/summit1-1600.jpg 1600w"
+              sizes="(max-width: 700px) 92vw, (max-width: 1200px) 45vw, 420px" width="1600" height="1200"
+              alt="Caleb Summiting a Mountain" loading="eager" decoding="async" fetchpriority="high">
           </figure>
           <figure class="photo-card">
-            <img src="assets/rocks.JPG" alt="Caleb sitting on a rock in the mountains" loading="lazy" decoding="async">
+            <img src="assets/rocks-1000.jpg" srcset="assets/rocks-1000.jpg 1000w, assets/rocks-1600.jpg 1600w"
+              sizes="(max-width: 700px) 92vw, (max-width: 1200px) 45vw, 420px" width="1600" height="1200"
+              alt="Caleb sitting on a rock in the mountains" loading="lazy" decoding="async">
           </figure>
         </div>
       </div>
@@ -403,14 +408,21 @@
           </div>
           <div class="photo-grid" aria-label="Hiking photo gallery">
             <figure class="photo-card">
-              <img src="assets/franconia1.JPG" alt="Caleb Sitting on Mountain" loading="lazy" decoding="async">
+              <img src="assets/franconia1-1000.jpg"
+                srcset="assets/franconia1-1000.jpg 1000w, assets/franconia1-1600.jpg 1600w"
+                sizes="(max-width: 700px) 92vw, (max-width: 1200px) 45vw, 420px" width="1600" height="1200"
+                alt="Caleb Sitting on Mountain" loading="lazy" decoding="async">
             </figure>
             <figure class="photo-card">
-              <img src="assets/waterfall1.JPG" alt="Caleb Standing at Waterfall" loading="lazy" decoding="async">
+              <img src="assets/waterfall1-1000.jpg"
+                srcset="assets/waterfall1-1000.jpg 1000w, assets/waterfall1-1600.jpg 1600w"
+                sizes="(max-width: 700px) 92vw, (max-width: 1200px) 45vw, 420px" width="1600" height="1200"
+                alt="Caleb Standing at Waterfall" loading="lazy" decoding="async">
             </figure>
             <figure class="photo-card">
-              <img src="assets/rock1.JPG" alt="Caleb sitting on a rock in the mountains" loading="lazy"
-                decoding="async">
+              <img src="assets/rock1-1000.jpg" srcset="assets/rock1-1000.jpg 1000w, assets/rock1-1600.jpg 1600w"
+                sizes="(max-width: 700px) 92vw, (max-width: 1200px) 45vw, 420px" width="1600" height="1200"
+                alt="Caleb sitting on a rock in the mountains" loading="lazy" decoding="async">
             </figure>
           </div>
         </div>
