--- a/index.html
+++ b/index.html
@@ -60,7 +60,11 @@
   <div class="site-nav">
     <div class="wrap masthead">
       <a class="brand" href="#top">Caleb Stammen | CS</a>
-      <nav class="nav" aria-label="Primary navigation">
+      <button class="nav-toggle" type="button" aria-expanded="false" aria-controls="primary-nav">
+        <span class="nav-toggle-label">Menu</span>
+        <span class="nav-toggle-icon" aria-hidden="true"></span>
+      </button>
+      <nav class="nav" id="primary-nav" aria-label="Primary navigation">
         <div class="nav-links">
           <a href="#about">About</a>
           <a href="#focus">Focus</a>
@@ -73,6 +77,7 @@
         </div>
         <div class="nav-actions">
           <a class="nav-btn" href="resume/">Resume</a>
+          <a class="nav-btn" href="https://github.com/calebstammen/calebstammen.com">Source code</a>
           <a class="nav-cta" href="mailto:me@calebstammen.com">Email</a>
         </div>
       </nav>
@@ -114,12 +119,14 @@
             <img src="assets/summit1-1000.jpg"
               srcset="assets/summit1-1000.jpg 1000w, assets/summit1-1600.jpg 1600w"
               sizes="(max-width: 700px) 92vw, (max-width: 1200px) 45vw, 420px" width="1600" height="1200"
-              alt="Caleb Summiting a Mountain" loading="eager" decoding="async" fetchpriority="high">
+              alt="Caleb Summiting a Mountain" data-fallback="assets/summit1.JPG" loading="eager" decoding="async"
+              fetchpriority="high">
           </figure>
           <figure class="photo-card">
             <img src="assets/rocks-1000.jpg" srcset="assets/rocks-1000.jpg 1000w, assets/rocks-1600.jpg 1600w"
               sizes="(max-width: 700px) 92vw, (max-width: 1200px) 45vw, 420px" width="1600" height="1200"
-              alt="Caleb sitting on a rock in the mountains" loading="lazy" decoding="async">
+              alt="Caleb sitting on a rock in the mountains" data-fallback="assets/rocks.JPG" loading="lazy"
+              decoding="async">
           </figure>
         </div>
       </div>
@@ -411,18 +418,20 @@
               <img src="assets/franconia1-1000.jpg"
                 srcset="assets/franconia1-1000.jpg 1000w, assets/franconia1-1600.jpg 1600w"
                 sizes="(max-width: 700px) 92vw, (max-width: 1200px) 45vw, 420px" width="1600" height="1200"
-                alt="Caleb Sitting on Mountain" loading="lazy" decoding="async">
+                alt="Caleb Sitting on Mountain" data-fallback="assets/franconia1.JPG" loading="lazy" decoding="async">
             </figure>
             <figure class="photo-card">
               <img src="assets/waterfall1-1000.jpg"
                 srcset="assets/waterfall1-1000.jpg 1000w, assets/waterfall1-1600.jpg 1600w"
                 sizes="(max-width: 700px) 92vw, (max-width: 1200px) 45vw, 420px" width="1600" height="1200"
-                alt="Caleb Standing at Waterfall" loading="lazy" decoding="async">
+                alt="Caleb Standing at Waterfall" data-fallback="assets/waterfall1.JPG" loading="lazy"
+                decoding="async">
             </figure>
             <figure class="photo-card">
               <img src="assets/rock1-1000.jpg" srcset="assets/rock1-1000.jpg 1000w, assets/rock1-1600.jpg 1600w"
                 sizes="(max-width: 700px) 92vw, (max-width: 1200px) 45vw, 420px" width="1600" height="1200"
-                alt="Caleb sitting on a rock in the mountains" loading="lazy" decoding="async">
+                alt="Caleb sitting on a rock in the mountains" data-fallback="assets/rock1.JPG" loading="lazy"
+                decoding="async">
             </figure>
           </div>
         </div>
