Mobile Friendly, Resume Adjustments, Cleanup

--- a/index.html
+++ b/index.html
@@ -72,13 +72,13 @@
           <a href="#work">Work</a>
           <a href="#experience">Experience</a>
           <a href="#education">Education</a>
+          <a href="#outside">Off the Clock</a>
           <a href="#travel">Travel</a>
           <a href="#contact">Contact</a>
         </div>
         <div class="nav-actions">
-          <a class="nav-btn" href="resume/">Resume</a>
-          <a class="nav-btn" href="https://github.com/calebstammen/calebstammen.com">Source code</a>
-          <a class="nav-cta" href="mailto:me@calebstammen.com">Email</a>
+          <a class="nav-btn" href="resume/" target="_blank" rel="noopener">Resume</a>
+          <a class="nav-cta" href="mailto:me@calebstammen.com" target="_blank" rel="noopener">Email</a>
         </div>
       </nav>
     </div>
@@ -96,9 +96,11 @@
           responsibly to drive real-world impact.
         </p>
         <div class="hero-actions">
-          <a class="btn primary" href="mailto:me@calebstammen.com">Email</a>
-          <button class="btn secondary" type="button" data-copy-email>Copy email</button>
-          <a class="btn ghost" href="resume/">Resume</a>
+          <a class="btn primary" href="mailto:me@calebstammen.com" target="_blank" rel="noopener">Email</a>
+          <button class="btn ghost" type="button" data-copy-email>Copy email</button>
+          <a class="btn ghost" href="resume/" target="_blank" rel="noopener">Resume</a>
+          <a class="btn ghost" href="https://github.com/calebstammen/calebstammen.com" target="_blank"
+            rel="noopener">Source code</a>
         </div>
         <div class="hero-meta">
           <div>
@@ -116,17 +118,12 @@
         </div>
         <div class="photo-grid hero-photos" aria-label="Hiking photo gallery">
           <figure class="photo-card">
-            <img src="assets/summit1-1000.jpg"
-              srcset="assets/summit1-1000.jpg 1000w, assets/summit1-1600.jpg 1600w"
-              sizes="(max-width: 700px) 92vw, (max-width: 1200px) 45vw, 420px" width="1600" height="1200"
-              alt="Caleb Summiting a Mountain" data-fallback="assets/summit1.JPG" loading="eager" decoding="async"
-              fetchpriority="high">
+            <img src="assets/summit1.jpg" width="1400" height="1050" alt="Caleb Summiting a Mountain"
+              loading="eager" decoding="async" fetchpriority="high">
           </figure>
           <figure class="photo-card">
-            <img src="assets/rocks-1000.jpg" srcset="assets/rocks-1000.jpg 1000w, assets/rocks-1600.jpg 1600w"
-              sizes="(max-width: 700px) 92vw, (max-width: 1200px) 45vw, 420px" width="1600" height="1200"
-              alt="Caleb sitting on a rock in the mountains" data-fallback="assets/rocks.JPG" loading="lazy"
-              decoding="async">
+            <img src="assets/rocks.jpg" width="1400" height="1050" alt="Caleb sitting on a rock in the mountains"
+              loading="lazy" decoding="async">
           </figure>
         </div>
       </div>
@@ -403,35 +400,28 @@
         <div class="section-body">
           <p>I reset in the mountains, with a book, or by building something that doesn’t compile. (interpret this as
             you wish)</p>
-          <div class="tag-row">
-            <span class="tag">Hiking</span>
-            <span class="tag">Backpacking</span>
-            <span class="tag">Reading</span>
-            <span class="tag">Coding</span>
-            <span class="tag">Traveling</span>
-            <span class="tag">Woodworking</span>
-            <span class="tag">Gaming</span>
-            <span class="tag">Music</span>
-          </div>
-          <div class="photo-grid" aria-label="Hiking photo gallery">
-            <figure class="photo-card">
-              <img src="assets/franconia1-1000.jpg"
-                srcset="assets/franconia1-1000.jpg 1000w, assets/franconia1-1600.jpg 1600w"
-                sizes="(max-width: 700px) 92vw, (max-width: 1200px) 45vw, 420px" width="1600" height="1200"
-                alt="Caleb Sitting on Mountain" data-fallback="assets/franconia1.JPG" loading="lazy" decoding="async">
+	          <div class="tag-row">
+	            <span class="tag">Hiking</span>
+	            <span class="tag">Backpacking</span>
+	            <span class="tag">Reading</span>
+	            <span class="tag">Coding</span>
+	            <span class="tag">Traveling</span>
+	            <span class="tag">Woodworking</span>
+	            <span class="tag">Weightlifting</span>
+	            <span class="tag">Music</span>
+	          </div>
+	          <div class="photo-grid" aria-label="Hiking photo gallery">
+	            <figure class="photo-card">
+	              <img src="assets/franconia1.jpg" width="1400" height="1050" alt="Caleb Sitting on Mountain"
+	                loading="lazy" decoding="async">
             </figure>
             <figure class="photo-card">
-              <img src="assets/waterfall1-1000.jpg"
-                srcset="assets/waterfall1-1000.jpg 1000w, assets/waterfall1-1600.jpg 1600w"
-                sizes="(max-width: 700px) 92vw, (max-width: 1200px) 45vw, 420px" width="1600" height="1200"
-                alt="Caleb Standing at Waterfall" data-fallback="assets/waterfall1.JPG" loading="lazy"
-                decoding="async">
+              <img src="assets/waterfall1.jpg" width="1400" height="1050" alt="Caleb Standing at Waterfall"
+                loading="lazy" decoding="async">
             </figure>
             <figure class="photo-card">
-              <img src="assets/rock1-1000.jpg" srcset="assets/rock1-1000.jpg 1000w, assets/rock1-1600.jpg 1600w"
-                sizes="(max-width: 700px) 92vw, (max-width: 1200px) 45vw, 420px" width="1600" height="1200"
-                alt="Caleb sitting on a rock in the mountains" data-fallback="assets/rock1.JPG" loading="lazy"
-                decoding="async">
+              <img src="assets/rock1.jpg" width="1400" height="1050" alt="Caleb sitting on a rock in the mountains"
+                loading="lazy" decoding="async">
             </figure>
           </div>
         </div>
@@ -511,10 +501,11 @@
               <p>Let's talk.</p>
             </div>
             <div class="contact-actions">
-              <a class="btn primary" href="mailto:me@calebstammen.com">Email me</a>
-              <button class="btn secondary" type="button" data-copy-email>Copy email</button>
-              <a class="btn ghost" href="https://github.com/calebstammen">GitHub</a>
-              <a class="btn ghost" href="https://www.linkedin.com/in/calebstammen/">LinkedIn</a>
+              <a class="btn primary" href="mailto:me@calebstammen.com" target="_blank" rel="noopener">Email me</a>
+              <button class="btn ghost" type="button" data-copy-email>Copy email</button>
+              <a class="btn ghost" href="https://github.com/calebstammen" target="_blank" rel="noopener">GitHub</a>
+              <a class="btn ghost" href="https://www.linkedin.com/in/calebstammen/" target="_blank"
+                rel="noopener">LinkedIn</a>
             </div>
           </div>
         </div>
