--- a/resume/index.html
+++ b/resume/index.html
@@ -33,16 +33,18 @@
             <h1>Caleb Stammen, MSCIA</h1>
             <div class="title-line">Software Engineer | AI Lead | IT Manager</div>
             <div class="resume-actions">
-              <a class="btn primary" href="mailto:me@calebstammen.com">Email</a>
-              <button class="btn secondary" type="button" data-copy-email>Copy email</button>
-              <a class="btn ghost" href="./Caleb%20Stammen%20Resume.pdf" download>Download PDF</a>
+              <a class="btn primary" href="mailto:me@calebstammen.com" target="_blank" rel="noopener">Email</a>
+              <button class="btn ghost" type="button" data-copy-email>Copy email</button>
+              <a class="btn ghost" href="./Caleb%20Stammen%20Resume.pdf" download target="_blank"
+                rel="noopener">Download PDF</a>
             </div>
           </div>
 
           <div class="resume-links" aria-label="Links">
+            <div><a href="tel:+14192688302">419-268-8302</a></div>
             <div><a href="mailto:me@calebstammen.com">me@calebstammen.com</a></div>
-            <div><a href="https://github.com/calebstammen">github.com/calebstammen</a></div>
             <div><a href="https://www.linkedin.com/in/calebstammen/">linkedin.com/in/calebstammen</a></div>
+            <div><a href="https://github.com/calebstammen">github.com/calebstammen</a></div>
           </div>
         </header>
 
@@ -58,6 +60,53 @@
         </section>
 
         <section class="resume-section">
+          <h2>Skills</h2>
+
+          <article class="resume-role">
+            <h3>AI &amp; Machine Learning</h3>
+            <ul class="list">
+              <li>LLM application design and production deployment</li>
+              <li>Retrieval-augmented generation (RAG) systems</li>
+              <li>AI workflow automation, governance, mentoring, and adoption strategy</li>
+            </ul>
+          </article>
+
+          <article class="resume-role">
+            <h3>Software Engineering</h3>
+            <ul class="list">
+              <li>Full-stack web application development</li>
+              <li>Backend systems (Python, C#, JavaScript)</li>
+              <li>API design, integration, and secure architecture</li>
+            </ul>
+          </article>
+
+          <article class="resume-role">
+            <h3>Cloud, Infrastructure &amp; Security</h3>
+            <ul class="list">
+              <li>Cloud-native and hybrid infrastructure (Azure and AWS)</li>
+              <li>Cybersecurity programs aligned with NIST frameworks</li>
+              <li>Disaster recovery, backups, and business continuity</li>
+            </ul>
+          </article>
+
+          <article class="resume-role">
+            <h3>Automation &amp; Internal Systems</h3>
+            <ul class="list">
+              <li>Business process automation and internal tooling</li>
+              <li>AI-powered intranet, LMS, and knowledge systems</li>
+            </ul>
+          </article>
+
+          <article class="resume-role">
+            <h3>Leadership &amp; Strategy</h3>
+            <ul class="list">
+              <li>Technical ownership from system design through production adoption</li>
+              <li>Executive advisory, vendor evaluation, and cross-functional leadership</li>
+            </ul>
+          </article>
+        </section>
+
+        <section class="resume-section">
           <h2>Professional Experience</h2>
 
           <article class="resume-role">
@@ -65,39 +114,38 @@
             <div class="meta">
               <span>Garmann Miller</span>
               <span class="sep">&bull;</span>
-              <span>Nov 2024 - Present</span>
+              <span>Nov 2024 &ndash; Present</span>
               <span class="sep">&bull;</span>
               <span>Hybrid</span>
             </div>
             <p>Mid-sized architecture firm</p>
             <ul class="list">
-              <li>Own AI and full-stack software initiatives end to end, from use-case selection through production adoption.</li>
-              <li>Advise CEO and COO on AI strategy, technical feasibility, and organizational readiness; mentor employees on effective AI usage and tooling.</li>
-              <li>Design, build, and operate AI-powered internal systems supporting architecture workflows, including an AEC-focused meeting-minute platform saving 100+ labor hours per month.</li>
-              <li>Develop and maintain a facility assessment application, reducing on-site time and manual data entry by approximately 40%, using existing licenses and API integrations to minimize incremental cloud costs.</li>
-              <li>Automate employee preboarding, onboarding components, internal communications, and project information workflows across departments.</li>
-              <li>Co-lead the design and deployment of an AI-powered intranet and LMS, coordinating cross-functional stakeholders and securing executive buy-in.</li>
-              <li>Act as a technical advisor to IT leadership, contributing to improved cybersecurity posture and risk management.</li>
-              <li>Design and operate AI infrastructure across cloud and on-prem experimentation, ultimately standardizing on cloud deployment.</li>
-              <li>Guide internal teams on effective AI usage with emphasis on workflow integration, reliability, and adoption.</li>
+              <li>Own AI and full-stack software initiatives end to end, from use-case selection and system design through production deployment and organizational adoption</li>
+              <li>Advise executive leadership on AI strategy, technical feasibility, and organizational readiness; mentor key employees on effective AI usage and tooling</li>
+              <li>Design, build, and operate AI-powered internal systems supporting architecture workflows, including an AEC-focused meeting minute platform</li>
+              <li>Automate employee preboarding, onboarding components, internal communications, and project information workflows across departments</li>
+              <li>Co-lead the design and deployment of an AI-powered intranet and LMS, coordinating cross-functional stakeholders and securing executive buy-in</li>
+              <li>Act as a technical advisor to IT leadership, contributing to improved cybersecurity posture and risk management</li>
+              <li>Design and operate AI infrastructure across cloud and on-prem experimentation, ultimately standardizing on cloud deployment</li>
+              <li>Guide internal teams on effective AI usage with emphasis on workflow integration, reliability, and adoption</li>
             </ul>
           </article>
 
           <article class="resume-role">
-            <h3>Founder / Owner</h3>
+            <h3>Technical Founder / Owner</h3>
             <div class="meta">
               <span>Stammen Technology</span>
               <span class="sep">&bull;</span>
-              <span>Dec 2022 - Present</span>
+              <span>Dec 2022 &ndash; Present</span>
               <span class="sep">&bull;</span>
               <span>Hybrid</span>
             </div>
-            <p>AI, software development, automation, and web development firm</p>
+            <p>AI and development firm</p>
             <ul class="list">
-              <li>Shipped multiple AI and software products for paying customers.</li>
-              <li>Built a B2B SaaS platform for the men's formalwear industry.</li>
+              <li>Shipped multiple AI and software products for paying customers</li>
+              <li>Built a B2B SaaS platform for the men's formalwear industry</li>
               <li>Developed multiple websites for small to mid-sized businesses.</li>
-              <li>Pivoted from IT services to AI and software development in 2023.</li>
+              <li>Pivoted from IT/Cybersecurity services to AI and software development in 2023.</li>
             </ul>
           </article>
 
@@ -106,17 +154,17 @@
             <div class="meta">
               <span>Pax Machine Works</span>
               <span class="sep">&bull;</span>
-              <span>Jan 2024 - Nov 2024</span>
+              <span>Jan 2024 &ndash; Nov 2024</span>
             </div>
             <p>Mid-sized manufacturing organization</p>
             <ul class="list">
-              <li>Led networking, cybersecurity, server, cloud, and end-user systems for a production manufacturing environment, reporting directly to executive leadership.</li>
-              <li>Owned availability, security, and reliability of IT systems supporting manufacturing operations, engineering, and business functions.</li>
-              <li>Directed vendor selection, procurement, and automation initiatives to improve reliability, security posture, and cost efficiency.</li>
-              <li>Designed and implemented a secure industrial network integrating presses, robots, and sorters into a hybrid IT/OT environment.</li>
-              <li>Developed and deployed a custom C# application automating operational workflows, saving 200+ labor hours annually.</li>
-              <li>Led NIST-aligned security initiatives that improved cyber insurability, reduced organizational risk, and strengthened incident readiness.</li>
-              <li>Owned disaster recovery planning and execution, including backup strategy design and tabletop exercises to validate response readiness.</li>
+              <li>Led networking, cybersecurity, server, cloud, and end-user systems for a production manufacturing environment, reporting directly to executive leadership</li>
+              <li>Owned availability, security, and reliability of IT systems supporting manufacturing operations, engineering, and business functions</li>
+              <li>Directed vendor selection, procurement, and automation initiatives to improve system reliability, security posture, and cost efficiency</li>
+              <li>Designed and implemented a secure industrial network integrating presses, robots, and sorters into a hybrid IT/OT environment</li>
+              <li>Developed and deployed a custom C# application automating operational workflows, saving 200+ labor hours annually</li>
+              <li>Led NIST-aligned security initiatives that improved cyber insurability, reduced organizational risk, and strengthened incident readiness</li>
+              <li>Owned disaster recovery planning and execution, including backup strategy design and tabletop exercises to validate response readiness</li>
             </ul>
           </article>
 
@@ -125,10 +173,10 @@
             <div class="meta">
               <span>Pax Machine Works</span>
               <span class="sep">&bull;</span>
-              <span>Jun 2022 - Dec 2023</span>
+              <span>Jun 2022 &ndash; Dec 2023</span>
             </div>
             <ul class="list">
-              <li>Pitched and implemented an internal help-desk system, improving issue tracking and response workflows.</li>
+              <li>Pitched and implemented an internal help-desk system, improving issue tracking and response workflows</li>
             </ul>
           </article>
         </section>
@@ -142,8 +190,8 @@
               <span>Western Governors University</span>
             </div>
             <ul class="list">
-              <li>Member of the WGU Cybersecurity Club.</li>
-              <li>Earned excellence awards in Secure Software Design, Security Operations, and Secure Network Design.</li>
+              <li>Member of the WGU Cybersecurity Club</li>
+              <li>Earned excellence awards in Secure Software Design, Security Operations, and Secure Network Design</li>
             </ul>
           </article>
 
