--- a/index.html
+++ b/index.html
@@ -90,17 +90,19 @@
         <p class="kicker">Software Engineer · AI Lead · IT Manager</p>
         <h1>Caleb Stammen</h1>
         <p class="lead">
-          Welcome to my home on the web. For those of you new here, I’m a technical leader specializing in AI-enabled
+          Welcome to my home on the web. This site houses my professional portfolio, contact, a summary of my work, and
+          a snippet of my interests. I’m a technical leader specializing in AI-enabled
           systems
           across software development, IT management, automation, and security. I help organizations harness AI
           responsibly to drive real-world impact.
         </p>
         <div class="hero-actions">
           <a class="btn primary" href="mailto:me@calebstammen.com" target="_blank" rel="noopener">Email</a>
-          <button class="btn ghost" type="button" data-copy-email>Copy email</button>
           <a class="btn ghost" href="resume/" target="_blank" rel="noopener">Resume</a>
-          <a class="btn ghost" href="https://github.com/calebstammen/calebstammen.com" target="_blank"
+          <a class="btn secondary" href="https://github.com/calebstammen/calebstammen.com" target="_blank"
             rel="noopener">Source code</a>
+          <a class="btn ghost" href="https://github.com/calebstammen" target="_blank" rel="noopener">GitHub</a>
+          <a class="btn primary" href="https://www.linkedin.com/in/calebstammen/" target="_blank" rel="noopener">LinkedIn</a>
         </div>
         <div class="hero-meta">
           <div>
@@ -118,8 +120,8 @@
         </div>
         <div class="photo-grid hero-photos" aria-label="Hiking photo gallery">
           <figure class="photo-card">
-            <img src="assets/summit1.jpg" width="1400" height="1050" alt="Caleb Summiting a Mountain"
-              loading="eager" decoding="async" fetchpriority="high">
+            <img src="assets/summit1.jpg" width="1400" height="1050" alt="Caleb Summiting a Mountain" loading="eager"
+              decoding="async" fetchpriority="high">
           </figure>
           <figure class="photo-card">
             <img src="assets/rocks.jpg" width="1400" height="1050" alt="Caleb sitting on a rock in the mountains"
@@ -400,20 +402,20 @@
         <div class="section-body">
           <p>I reset in the mountains, with a book, or by building something that doesn’t compile. (interpret this as
             you wish)</p>
-	          <div class="tag-row">
-	            <span class="tag">Hiking</span>
-	            <span class="tag">Backpacking</span>
-	            <span class="tag">Reading</span>
-	            <span class="tag">Coding</span>
-	            <span class="tag">Traveling</span>
-	            <span class="tag">Woodworking</span>
-	            <span class="tag">Weightlifting</span>
-	            <span class="tag">Music</span>
-	          </div>
-	          <div class="photo-grid" aria-label="Hiking photo gallery">
-	            <figure class="photo-card">
-	              <img src="assets/franconia1.jpg" width="1400" height="1050" alt="Caleb Sitting on Mountain"
-	                loading="lazy" decoding="async">
+          <div class="tag-row">
+            <span class="tag">Hiking</span>
+            <span class="tag">Backpacking</span>
+            <span class="tag">Reading</span>
+            <span class="tag">Coding</span>
+            <span class="tag">Traveling</span>
+            <span class="tag">Woodworking</span>
+            <span class="tag">Weightlifting</span>
+            <span class="tag">Music</span>
+          </div>
+          <div class="photo-grid" aria-label="Hiking photo gallery">
+            <figure class="photo-card">
+              <img src="assets/franconia1.jpg" width="1400" height="1050" alt="Caleb Sitting on Mountain" loading="lazy"
+                decoding="async">
             </figure>
             <figure class="photo-card">
               <img src="assets/waterfall1.jpg" width="1400" height="1050" alt="Caleb Standing at Waterfall"
