--- a/index.html
+++ b/index.html
@@ -277,22 +277,22 @@
             <article class="case-card">
               <div class="case-head">
                 <h3>Placeholder</h3>
-                <span class="case-tag">Mobile Workflow</span>
+                <span class="case-tag">Placeholder</span>
               </div>
               <p>Placeholder</p>
               <ul class="case-list">
-                <li>Placeholder</li>
-                <li>Placeholder</li>
+                <li>I appreciate you reading this far! However, I haven't gotten around to this yet.</li>
+                <li>Coming soon! Keep on scrolling for more</li>
               </ul>
             </article>
             <article class="case-card">
               <div class="case-head">
                 <h3>Placeholder</h3>
-                <span class="case-tag">Enablement</span>
+                <span class="case-tag">Placeholder</span>
               </div>
               <p>Placeholder</p>
               <ul class="case-list">
-                <li>Placeholder</li>
+                <li>Coming soon!</li>
                 <li>Placeholder</li>
               </ul>
             </article>
